deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-ex
  namespace: nodejs-cd
  labels:
    app: nodejs-ex
    version: 1.0.1
  annotations:
    argocd-image-updater.argoproj.io/image-list: nodejs=quay.io/kanaet3888/nodejs
    argocd-image-updater.argoproj.io/update-strategy: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-ex
  template:
    metadata:
      labels:
        app: nodejs-ex
        version: 1.0.4
    spec:
      containers:
        - name: nodejs
          image: quay.io/kanaet3888/nodejs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
