service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-ex
spec:
  selector:
    app: nodejs-ex
  ports:
    - port: 80
      targetPort: 8080
