route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-ex
spec:
  to:
    kind: Service
    name: nodejs-ex
